src/test/deca/codegen/invalid/renduInter02/02arithmetic_overflow.deca
// Description:
//      Programme incorrecte à l'exécution
//      => Dépassemement arithmétique lors de calculs sur des grands nombres
//
// Resultats:
//      Erreur à l'exécution
//      Ligne 10 : dépassement arithmétique

{
    int x = 500000001;
    int y = 531486315;
    int z = 214656135;
    int t = (z+y) * y * x * y;
    println("t=", t);
}